test/expected/simple-timer.txt
/scripts/simple-timer.js:8
  throw new Error('trace');
  ^

Error: trace
    at Timeout.callback [as _onTimeout] (/scripts/simple-timer.js:r:c)
    at ontimeout (timers.js:r:c)
    at tryOnTimeout (timers.js:r:c)
    at listOnTimeout (timers.js:r:c)
    at processTimers (timers.js:r:c)
    at initAsyncResource (internal/timers.js:r:c)
    at new Timeout (internal/timers.js:r:c)
    at setTimeout (timers.js:r:c)
    at Object.<anonymous> (/scripts/simple-timer.js:r:c)
    at Module._compile (internal/modules/cjs/loader.js:r:c)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:r:c)
    at Module.load (internal/modules/cjs/loader.js:r:c)
    at tryModuleLoad (internal/modules/cjs/loader.js:r:c)
    at Function.Module._load (internal/modules/cjs/loader.js:r:c)
    at Function.Module.runMain (internal/modules/cjs/loader.js:r:c)
    at startup (internal/bootstrap/node.js:r:c)
    at bootstrapNodeJSCore (internal/bootstrap/node.js:r:c)
